tests/baselines/reference/jsxFragReactReferenceErrors(jsx=react-native).errors.txt
jsxFragReactReferenceErrors.tsx(5,8): error TS2686: 'React' refers to a UMD global, but the current file is a module. Consider adding an import instead.


==== jsxFragReactReferenceErrors.tsx (1 errors) ====
    /// <reference path="/.lib/react18/react18.d.ts" />
    /// <reference path="/.lib/react18/global.d.ts" />
    export function Component(){
    
    return <>
           ~~
!!! error TS2686: 'React' refers to a UMD global, but the current file is a module. Consider adding an import instead.
      </>
    }